<resources>
    <string name="app_name">App - Versão 2.0</string>
    <string name="txtCadastro">Bem-Vindo ao Cadastro</string>

    <string name="txtNomeMsg">Nome:</string>
    <string name="txtEndereçoMsg">Endereço:</string>
    <string name="txtBairroMsg">Bairro:</string>
    <string name="txtCidadeMsg">Cidade:</string>
    <string name="txtEstadoMsg">Estado:</string>
    <string name="txtCepMsg">CEP:</string>

    <string name="btnCadastrar">Cadastrar</string>

</resources>