<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txtCadastro"
        android:text="@string/txtCadastro"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="Name"
        android:hint="@string/txtNomeMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtEndereço"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="Address"
        android:hint="@string/txtEndereçoMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtBairro"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="Neighborhood"
        android:hint="@string/txtBairroMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="City"
        android:hint="@string/txtCidadeMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtEstado"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="State"
        android:hint="@string/txtEstadoMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtCep"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="Code"
        android:hint="@string/txtCepMsg"
        android:inputType="text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnCadastrar"
        android:text="@string/btnCadastrar"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
